test_suite/tests/ui/transparent/unit_struct.stderr
error: #[serde(transparent)] is not allowed on a unit struct
 --> tests/ui/transparent/unit_struct.rs:4:1
  |
4 | / #[serde(transparent)]
5 | | struct S;
  | |_________^
